# ostrich

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: authenticator.rs  cli.rs  client.rs  config.rs  lib.rs  proxy.rs  proxy_old.rs  server.rs  server_old.rs
async-tls/src/: server.rs
cli/: Cargo.toml
cli/src/: main.rs
command/: Cargo.toml
command/src/: frame.rs  lib.rs  opt.rs
db/: ostrich.db-shm  ostrich.db-wal  sqlite.db-shm  sqlite.db-wal
errors/: Cargo.toml
errors/src/: lib.rs
examples/: config.json
experiments/: Cargo.toml
experiments/src/: edge.rs  http.rs  hyper.rs  lib.rs  super.rs  surf.rs
migrations/: users.sql
network/: Cargo.toml
network/src/: lib.rs
network/src/trojan/: copy_bidirectional.rs  forward.rs  header.rs  mod.rs  resolver.rs  udp.rs  usermg.rs
service/: Cargo.toml  build.rs
service/src/: lib.rs
service/src/api/: mod.rs  state.rs  users.rs
service/src/db/: migration.rs  mod.rs  model.rs  pg.rs  sqlite.rs
service/src/register/: handler.rs  hyper.rs  mod.rs
