[package]
name = "app"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
flexi_logger = { version = "0.18", features = ["async", "specfile", "compress"] }
cfg-if = "1.0.0"
futures-lite = { version = "1.7.0" }
pin-project-lite = "0.2.0"
futures-util = { version = "0.3.5", features = ["sink", "io"] }
x509-parser = "0.9.0"
serde = {version = "1.0.117"}
serde_json = "1.0.59"
async-trait = "0.1.41"
event-listener = "2.5.1"
fluvio-future = { version = "0.3.0", features = ["net", "rust_tls", "task"] }
async-std = "1.9.0"
env_logger = "0.8.3"
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
errors = {path = "../errors" }
network = {path = "../network"}
service = {path = "../service"}
bytes = "1.0.0"
once_cell = "1.5"
rustls = "0.19"
futures = "0.3.15"
async-tls = {path = "../async-tls"}
glommio = "0.4.1"
num_cpus = "1.0"
socket2 = { version = "0.3.18", features = ["unix", "reuseport"] }
sqlx = { version = "0.5" }
command = {path = "../command"}
hyper = { version = "0.13.9", default-features = false }
dotenv = "0.15"
byteorder = "1.4.3"
crc = "2.0.0"
dialoguer = "0.8.0"
console = "0.14.1"
comfy-table = "3.0.0"
lru_time_cache = "0.11.11"
chrono = "0.4.19"
surf = "2.2.0"
async-std-resolver = { version = "0.20.2"}


[dev-dependencies]
bytes = "1.0.0"
flv-util = { version = "0.5.0", features = ["fixture"] }
fluvio-future = { version = "0.3.0", features = ["fixture", "timer"] }
serde = { version = "1.0.114"}
serde_json = "1.0.56"


[features]
default= ["sqlite"]
sqlite = ["sqlx/sqlite","sqlx/runtime-async-std-rustls"]

[[bin]]
name = "server"
path = "./src/server.rs"
[[bin]]
name ="ostrich_cli"
path = "src/cli.rs"


#[[bin]]
#name = "client"
#path = "./src/client.rs"
