[package]
name = "command"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
byteorder = "1.4.3"
bytes = "1.0.1"
crc = "2.0.0"
dialoguer = "0.8.0"
console = "0.14.1"
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }
anyhow = "1.0.41"
async-std = "1.9.0"
clap = "3.0.0-beta.2"