[package]
name = "experiments"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"
build="build/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name="network"
[dependencies]
libc = "0.2"
glommio = { git = "0.4.1"}
#tokio = { version = "0.2.23", default-features = false }
tokio = { version = "1", features = ["sync"] }
hyper = { version = "0.14", default-features = false, features = ["client", "server","http1"] }
async-tls = {path = "../async-tls"}
rustls = "0.19"
#hyperlocal = "0.8"
#env_logger = "0.8.1"
log = "0.4.11"
#tracing-subscriber = "0.2.14"
async-std = "1.9.0"
futures-lite = "1.11.1"

#tokio = { version = "1.2" , features = ["net","io-util","rt","macros"] }
#tokio-util = { version = "0.6" , features = ["codec"]}
#tokio-rustls =  "0.22"
bytes = "1.0"
#log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
argh = "0.1"
once_cell = "1.5"
async-std-resolver = { version = "0.20.2"}
socket2 = "0.3"

trust-dns-resolver = { version = "0.20" , features = ["dns-over-rustls"] }

tonic = { version = "0.4", features = ["tls"] }
prost = "0.7"
futures = { version = "0.3", default-features = false , features=["std"] }
sha2 = "0.9"
hex = "0.4"
[build-dependencies]
cc = "1.0"
bindgen = "0.58"
cmake = "^0.1.37"
tonic-build = { version = "0.4", features = ["prost"] }