[package]
name = "network"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
log = "0.4"
once_cell = "1.7"
#glommio = "0.4.1"
errors = {path = "../errors" }
async-tls = {path = "../async-tls"}
async-std-resolver = { version = "0.20.2"}
fluvio-future = { version = "0.3.0", features = ["fixture", "timer"] }
#socket2 = "0.3"
#tonic = { version = "0.4", features = ["tls"] }
#prost = "0.7"
trust-dns-resolver = { version = "0.20" , features = ["dns-over-rustls"] }
futures = { version = "0.3", default-features = false , features=["std"] }
futures-lite = "1.11.1"
async-std = "1.6.5"
sha2 = "0.9"
hex = "0.4"
tokio = { version = "1.3.0", features = ["macros"] }
rustls = "0.19.1"
anyhow = "1.0.38"