[package]
name = "service"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rusqlite = {version = "0.25.1",features = ["bundled"]}
sqlx = { version = "0.5" }
async-std = "1"
hyper = { version = "0.13.9", default-features = false }
tokio = { version = "0.2.23", default-features = false }
glommio = {version = "0.4.1" }
futures-lite = "1.11.1"
async-trait = "0.1.50"
log = "0.4.14"
itertools = "0.10.1"
serde = "1.0.126"
serde_json = "1.0.64"
serde_repr = "0.1.7"
chrono = "0.4.19"
anyhow = "1.0.41"
bytes = {version = "0.5.6"}
rand = "0.8.3"
thiserror = "1.0.25"
uuid = { version = "0.8", features = ["serde", "v4"] }
errors = {path = "../errors"}
[features]
default= ["sqlite"]
sqlite = ["sqlx/sqlite","sqlx/time","sqlx/runtime-async-std-rustls","sqlx/any"]
